--- a/starter_code/stylesheets/style.css
+++ b/starter_code/stylesheets/style.css
@@ -5,3 +5,268 @@ main-titles dark-grey: #2C303F;
 paragraph grey: #5b5e6d;
 nav grey: #5b5e6d;
 */
+
+/* Mobile View */
+
+body{
+  margin: 0 auto;
+  padding: 0;
+  font-size: 14px;
+  font-weight: 100;
+  font-family: 
+}
+
+h1, h2, h3{
+  color: #2C303F;
+}
+
+h1{
+  font-size: 45px;
+  padding-left: 3vw;
+  margin-block-end: 0.5vh;
+  margin-top: 15px;
+}
+
+h2{
+  font-size:31px;
+}
+
+
+
+nav {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 0;
+  left:0;
+  right:0;
+  background-color: white;
+  border-bottom: 1px solid #5b5e6d;
+}
+
+nav img{
+  height: 12vh;
+  height:10vh;
+}
+
+nav ul{
+  display: none;
+}
+
+header{
+  padding-top: 12vh;
+  width: 100vw;
+  box-sizing: border-box;
+  padding-left: 9vw;
+  padding-right: 9vw;
+}
+
+header img{
+  height: 50vh;
+  padding: 0vh 0vh 0.5vh 2.5vh
+}
+
+header p{
+  font-size: 21px;
+  line-height: 1.3em;
+  color: #5b5e6d;
+  font-weight: 100;
+  padding-bottom: 2vh;
+  text-align: left;
+}
+
+main{
+  text-align: center;
+  padding-bottom: 15px;
+}
+
+main p{
+  padding-left: 11vw;
+  padding-right: 11vw;
+  font-size: 18px;
+  line-height: 1.5em;
+  color: #5b5e6d;
+  font-weight: 100;
+  margin-top: 0vh;
+}
+
+.bckgrnd-grey{
+  background-color: #F4F3F4;
+}
+
+.flex-container-col{
+  display: flex;
+  flex-flow: column wrap;
+}
+
+.flex-aligner-center{
+  align-items: center;
+  align-content: center;
+}
+
+.flex-item-center{
+  justify-content: center;
+}
+
+.flex-item-left{
+  justify-content: center;
+  align-self: flex-start;
+}
+
+.form-layout{
+  width: 90vw;
+  font-size: 18px;
+}
+
+.button-layout{
+  width: 80vw;
+  height: 7vh;
+  border-radius: 4px;
+}
+
+.button-get{
+  background-color: #192592;
+  color: white;
+  font-size: inherit;
+  font-weight: 400;
+  border-radius: 4px;
+  border: 1px groove #192592;
+}
+
+.button-why{
+  border: 1px groove #192592;
+  color: #192592;
+  background-color: white;
+  font-size: inherit;
+  font-weight: 400;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  
+}
+
+.border-box{
+  box-sizing: border-box;
+}
+
+.input-button{
+  border: 1px groove #5b5e6d;;
+  margin-bottom: 10px;
+  font-size: inherit;
+  padding-left: 4vw;
+  border-radius: 4px;
+}
+
+#slack-logo{
+  width: 22vw;
+  align-self: flex-start;
+  justify-content: left;
+}
+
+.flex-order{
+  order: 1;
+}
+
+.btn-spacer{
+  margin-top: 2vh;
+  padding-bottom: 3vh;
+}
+
+.img-border{
+  padding: 3vh 0;
+  width: 75vw;
+  height: 9vh;
+  border-bottom: 0.5px groove rgb(91,94,109, 0.2);
+  padding-bottom: 18%;
+  padding-top: 8%;
+}
+
+.img-border img{
+  max-height: 7vh;
+  max-width: 70vw;
+}
+
+#img-smaller{
+  max-width: 40vw;
+  padding-bottom: 5%;
+  padding-top: 2%;
+}
+
+.img-border.wide img{
+  max-width: 75vw;
+  max-height: 7vh;
+  padding-bottom: 15%;
+  padding-top: 2%;
+}
+.bckgrnd-white{
+  background-color: white;
+}
+
+#no-border{
+  border-bottom: none;
+}
+
+#slack-div{
+  width: 100vw;
+}
+
+.flex-container-row{
+  display: flex;
+  flex-flow: row wrap;
+  padding: 0;
+  margin: 0;
+}
+
+#flex-no-wrap{
+  flex-wrap: nowrap;
+  list-style: none;
+}
+
+.flex-footer-item-col{
+  padding: 1.5vh 0;
+  color: #5b5e6d;
+}
+
+.flex-footer-item-col strong{
+  font-weight: 800;
+}
+
+.flex-footer-item-row{
+  width: 40%;
+  list-style: none;
+  margin-top: 3px;
+  font-size: 17px;
+}
+
+.footer-bottom{
+  height: 20vh;
+}
+
+.footer-bottom ul{
+  font-weight: 500;
+}
+
+.footer-bottom *{
+  padding: 5px 10px;
+  color: #5b5e6d;
+  font-size: 16px;
+}
+
+#space-smaller{
+  padding: 5px
+}
+
+.footer-bottom img{
+  height: 3vh;
+}
+
+.row-3{
+  height: 25%;
+  padding: 5px;
+}
+
+.flex-aligner-spacearound{
+  align-items: center;
+  align-content: space-around;
+}
+
